# md_emulator

./: .gitignore  .gitmessage  .jscpd-core.json  .jscpd.json  AGENTS.md  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-index2RTFBM\index  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-index5QhX7K\index  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-index6WoaV7\index  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-index7jTC3p\index  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-indexAAocGh\index  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-indexEUUAIv\index  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-indexIoGEn9\index  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-indexMnYPzj\index  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-indexV0p0nn\index  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-indexavClXg\index  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-indexnGFKZc\index  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-indexuj6dYz\index  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-indexvU1IGP\index  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-indexvaNN5r\index  C:\Users\GAMEOF~1\AppData\Local\Temp\codex-git-indexx7s2m8\index  Cargo.toml  Rust環境構築.md  copilotメモ.txt  deny.toml  gettext.json  output.html  package-lock.json  package.json
.github/: copilot-instructions.md
crates/md-core/: Cargo.toml  build.rs
crates/md-core/src/: lib.rs
docs/: README.md  api.md  embedding.md  setup.md  spec.md  usage.md
electron/: .gitignore  PLUGIN.md  README.md  build-system.js  debug-preload.js  electron-builder.yml  main.js  package-lock.json  package.json  plugin-manager.js  preload.js  rescomp-manager.js  setup-manager.js  testplay-preload.js
frontend/: api-client.html  debug.html  embed-example.html  emulator.js  index.html  manifest.webmanifest  md-emulator.d.ts  md-emulator.js  sw.js  sw.template.js  wasm-player.js  wasm.html
game-editor-common/: app-config.js  index.js  package.json
md-game-editor/: .gitignore  AI_CONTROL.md  PLUGIN.md  README.md  app.config.js  build-system.js  core-manager.js  editor-control-service.js  main.js  (+11 more)
(+721 files in other folders)
