[workspace]
members = [
	"crates/md-bus",
	"crates/md-cpu-m68k",
	"crates/md-cpu-z80",
	"crates/md-vdp",
	"crates/md-apu",
	"crates/md-core",
	"crates/md-wasm",
	"crates/md-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
zip = { version = "=2.4.2", default-features = false, features = ["deflate"] }
wasm-bindgen = "=0.2.114"
serde-wasm-bindgen = "=0.6.5"
js-sys = "=0.3.91"
base64 = "=0.22.1"
axum = { version = "=0.8.8", features = ["ws"] }
tokio = { version = "=1.50.0", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time"] }
tracing = "=0.1.44"
tower-http = { version = "=0.6.8", features = ["cors"] }
